2008-04-04  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c (uniscribe_check_otf): Fix last change.
	(uniscribe_check_otf): Add GC protection before consing. 
	Rearrange loop for counting features.

2008-04-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* insdel.c (insert_from_buffer_1): Don't compare bytes in destination
	buffer with byte-size of source buffer.

2008-04-03  Chong Yidong  <cyd@stupidchicken.com>

	* callint.c (Fcall_interactively): Handle temporary region even
	when shift-select-mode is off.

2008-04-03  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c (uniscribe_check_otf): Sanity check otf_spec.

2008-04-03  Kenichi Handa  <handa@m17n.org>

	* coding.c (CATEGORY_MASK_ANY): Add CATEGORY_MASK_UTF_16_AUTO.
	(CATEGORY_MASK_UTF_16): Likewise.
	(detect_coding_utf_16): Add heuristics to reject utf-16 for a
	binary file.
	(detect_coding): Add null-byte detection for a binary file.
	(detect_coding_system): Likewise.

2008-04-03  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c: New file.

	* font.h (uniscribe_font_driver) [WINDOWSNT]: Declare for w32fns.c.

	* w32font.h (uniscribe_check_otf): Declare for w32font.c.

	* w32font.c (Qbalinese, Qbuginese, Qbuhid, Qcuneiform, Qcypriot)
	(Qdeseret, Qglagolitic, Qgothic, Qhanunoo, Qkharoshthi)
	(Qlimbu, Qlinear_b, Qold_italic, Qold_persian, Qosmanya)
	(Qphags_pa, Qphoenician, Qshavian, Qsyloti_nagri)
	(Qtagalog, Qtagbanwa, Qtai_le, Qtifinagh, Qugaritic)
	(Qphonetic): New symbols.
	(syms_of_w32font): Initialize them.
	(font_supported_scripts): Use them.
	(w32font_list_family): List all charsets.
	(w32font_text_extents, recompute_cached_metrics): Fix metric
	calculations.
	(w32_enumfont_pattern_entity): Make full_type a DWORD.
	Give opentype fonts their own format.
	(font_matches_spec): New arguments backend and logfont.
	Handle :otf spec for uniscribe backend.
	(add_font_entity_to_list): Match truetype fonts in uniscribe backend.
	(fill_in_logfont): Use DEFAULT_CHARSET when charset not supplied.
	