@@ -1,7 +1,15 @@
+2008-04-04  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* undo.c (last_boundary_buffer, last_boundary_position): New vars.
+	(Fundo_boundary): Set them.
+	(syms_of_undo): Initialize them.
+	(record_point): Use them instead of last_point_position*.
+	(last_undo_buffer): Change type.
+
 2008-04-04  Jason Rumney  <jasonr@gnu.org>
 
 	* w32uniscribe.c (uniscribe_check_otf): Fix last change.
-	(uniscribe_check_otf): Add GC protection before consing. 
+	(uniscribe_check_otf): Add GC protection before consing.
 	Rearrange loop for counting features.
 
 2008-04-03  Stefan Monnier  <monnier@iro.umontreal.ca>
@@ -52,7 +60,7 @@
 	Handle :otf spec for uniscribe backend.
 	(add_font_entity_to_list): Match truetype fonts in uniscribe backend.
 	(fill_in_logfont): Use DEFAULT_CHARSET when charset not supplied.
-	
+
 	* w32fns.c (Fx_create_frame): Conditionally register uniscribe
 	font backend.
 	(globals_of_w32fns): Initialize uniscribe font backend.
